Ensure app runs as root

--- a/portal.service
+++ b/portal.service
@@ -2,7 +2,7 @@
 Description=captive portal service
 
 [Service]
-ExecStart=/usr/bin/python3 -u /home/pi/RaspiWiFi/libs/configuration_app/app.py
+ExecStart=env -i PYTHONPATH=/home/pi/.local/lib/python3.7/site-packages /usr/bin/python3 -u /home/pi/RaspiWiFi/libs/configuration_app/app.py
 WorkingDirectory=/home/pi
 
 [Install]
